[package]
name = "youtube-subscriptions"
version = "0.2.64"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "terminal UI for viewing youtube subscriptions"
readme = "README.md"
homepage = "https://github.com/yazgoo/youtube-subscriptions"
repository = "https://github.com/yazgoo/youtube-subscriptions"
keywords = ["cli", "youtube", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
dirs = { version = "2.0.1", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
terminal_size = { version = "0.1.8", default-features = false }
crossterm_input = { version = "0.3", default-features = false }
crossterm = { version = "0.9" }
rayon = { version = "1.1", default-features=false }
webbrowser = { version = "0.5", default-features=false }
clipboard = { version = "0.5", default-features=false }
roxmltree = { version = "0.7", default-features = false }
reqwest = { git="https://github.com/EmbarkStudios/reqwest", version = "= 0.10.0-alpha.2", features = ["gzip", "rustls-tls"] }
futures = { version = "0.3" , features = ["compat"] }
tokio = { version = "0.2.0-alpha", features = ["macros"] }
chrono = { version = "0.4" }
base64 = { version = "0.11" }
regex = { version = "1.3" }
ctrlc = { version = "3.1" }
html2text = { version = "0.1" }
