[package]
name = "youtube-subscriptions"
version = "0.2.73"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "terminal UI for viewing youtube subscriptions"
readme = "README.md"
homepage = "https://github.com/yazgoo/youtube-subscriptions"
repository = "https://github.com/yazgoo/youtube-subscriptions"
keywords = ["cli", "youtube", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
dirs = { version = "2.0.1", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
crossterm_input = { version = "0.3", default-features = false }
crossterm = { version = "0.14" }
rayon = { version = "1.1", default-features=false }
clipboard = { version = "0.5", default-features=false }
roxmltree = { version = "0.7", default-features = false }
reqwest = { version = " 0.10", features = ["gzip", "rustls-tls", "blocking"] }
webbrowser = { git="https://github.com/yazgoo/webbrowser-rs#a36dcbf", version = "= 0.5.2" }
futures = { version = "0.3" , features = ["compat"] }
tokio = { version = "0.2.0-alpha", features = ["macros"] }
chrono = { version = "0.4" }
base64 = { version = "0.11" }
regex = { version = "1.3" }
ctrlc = { version = "3.1" }
html2text = { version = "0.1" }
percent-encoding = { version = "2.1" }
blockish = { version = "0.0.2" }
blockish-player = { version = "0.0.3" }
utf-8 =  { version = "0.7.5" }
openssl-sys = { version = "*", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
blockish-caca = { version = "0.0.2" }

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
