[package]
name = "youtube-subscriptions"
version = "0.2.76"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2021"
license = "MIT"
description = "terminal UI for viewing youtube subscriptions"
readme = "README.md"
homepage = "https://github.com/yazgoo/youtube-subscriptions"
repository = "https://github.com/yazgoo/youtube-subscriptions"
keywords = ["cli", "youtube", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
dirs = { version = "5.0", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }

crossterm_input = { version = "0.5", default-features = false }
crossterm = { version = "0.27" }
rayon = { version = "1.8", default-features=false }
copypasta = { version = "0.10" }
roxmltree = { version = "0.18", default-features = false }
reqwest = { version = "0.11", features = ["gzip", "rustls-tls", "blocking"] }
webbrowser = { version = "0.8" }
futures = { version = "0.3" , features = ["compat"] }
tokio = { version = "1.33", features = ["macros"] }
chrono = { version = "0.4" }
base64 = { version = "0.21" }
regex = { version = "1.3" }
ctrlc = { version = "3.1" }
html2text = { version = "0.6" }
percent-encoding = { version = "2.1" }
blockish = { version = "0.1.2" }
blockish-player = { version = "0.0.4" }
utf-8 =  { version = "0.7.5" }
openssl-sys = { version = "0.9", features = ["vendored"] }
num-digitize = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
blockish-caca = { version = "0.0.4" }

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
